--- a/hidden/styles.css
+++ b/hidden/styles.css
@@ -54,6 +54,10 @@ body {
     background-color:#808080a8;
 }
 
+#mute:hover {
+    background-color: #cac8c8a8;
+}
+
 #footer {
     position: absolute;
     bottom: 0%;
